updated readme,added validation and get notifications
