# backend/src/swagger/docs.yaml
@@ -224,3 +224,14 @@ paths:
           description: User deleted
         404:
           $ref: "#/components/schemas/ErrorResponse"
+
+  # =======================================
+  #  Admin View Notification
+  # =======================================
+  /notifications:
+    patch:
+      security:
+        - bearerAuth: []
+    responses:
+      200:
+        description: Notification retrieved
